--- a/conclussions.tex
+++ b/conclussions.tex
@@ -1,22 +1,17 @@
-\section{Conclusiones}
+\section{Conclusions}
 \label{section:jstat:concs}
 
-Una vez descritos los problemas asociados a la explosión combinatoria de
-algunos operadores del álgebra, se busca generar información suficiente
-que permita determinar la probabilidad de que una característica cualquiera
-se encuentre presente en el conjunto de productos válidos del término
-a representar.
+Once described all the problems relates to the combinatory explosion
+for some of the algebra's operators, we aim to generate enough information
+allowing to determine the probability of a probability in the valid
+products set.
 %
-Para llevar a cabo esto, han sido descritos los nuevos operadores sintácticos
-de la extensión probabilística. Una vez definidos, han de representarse las 
-extensiones para las reglas de las semánticas descritas en secciones anteriores,
-como lo son la semántica operacional y la semántica denotacional.
+To do so we have defined new syntactical operators for the probabilistic
+extension. Once defined, we have represented the extension to give a logical
+meaning to these semantic rules based on the operational semantics
+and denotational semantics.
 %
-Al haber mostrado por completo la definición formal de la extensión probabilística
-es imprescindible mostrar que la extensión es consistente con las definiciones de las
-secciones anteriores.
+Also this extension was proven to be consistent against the presented definitions
+and with the non probabilistic models.
 %
-Una vez definida la extensión, son mostradas las ventajas de ocultar aquellos elementos
-sintácticos que no afectan la cardinalidad del conjunto de productos válidos del sistema.
-Esto permite analizar el término de manera mas eficiente reduciendo la complejidad del
-algoritmo a orden N, posiblemente siendo este término de una longitud considerable.
+The implementation of this extension allows to compute and calculate the probability of the features among the valid products.
